--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "styled-components": "^5.3.6",
+    "web3": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
